inizio main player

--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
 </head>
 <body>
     <main>
-        
+        <div class="main-player">
+            <div class="current-song">
+            </div>
+            
+            <div class="commands">
+                <div class="commands-row-buttons">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-solid fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-repeat"></i>
+
+                </div>
+                <div class="current-song-line">
+                    <span>0:25</span>
+                    <div id="progress-line"></div>
+                    <span>4:35</span>
+                </div>
+            </div>
+
+            <div class="minor-commands">
+
+
+            </div>
+        </div>
     </main>
 </body>
 </html>
