--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <main>
         <div class="main-player">
             <div class="current-song">
+                <figure id="current-song-box">
+                    <img src="img/sinister.jpeg" alt="sinister-cover" class="song-cover">
+                    <figcaption>
+                        <span class="current-song-title">Sinister</span>
+                        <br>
+                        <span class="current-song-name">Brano Nome</span>
+                    </figcaption>
+                </figure>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-folder"></i>
             </div>
             
             <div class="commands">
@@ -32,8 +42,10 @@
             </div>
 
             <div class="minor-commands">
-
-
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div id="progress-line"></div>
             </div>
         </div>
     </main>
