media screen xs 552px e hovers, manca solo sistemare la player tab

--- a/index.html
+++ b/index.html
@@ -84,6 +84,36 @@
                         </div>
                     </div>
                 </div>
+
+
+<!-- ****************** SIDEBAR RIDOTTA XS *******************  -->
+                <div class="sidebar-xs">
+
+                    <div class="sidebar-xs-top">
+                        <a href="#" id="logo-small">
+                            <img src="img/SVG/logo-small.svg" alt="home spotify logo small">
+                        </a>
+                        <a href="#">
+                            <img src="img/SVG/home.svg" alt="home button">
+                        </a>
+                        <a href="#">
+                            <img src="img/SVG/search.svg" alt="search button">
+                        </a>
+                        <a href="#">
+                            <img src="img/SVG/libreria.svg" alt="library button">
+                        </a>
+                    </div>
+
+                    <div class="sidebar-xs-bottom">
+                        <a class="sidebar-download-xs">
+                            <img src="img/SVG/download.svg" alt="download app button">
+                        </a>
+                        <span class="sidebar-profile-xs">
+                            <img src="img/SVG/profile.svg" alt="profile image">
+                        </span>
+                    </div>
+
+                </div>
             </div>
 
 <!-- *********** MAIN SECTION *********** --> 
@@ -291,24 +321,26 @@
             
             <div class="commands">
                 <div class="commands-row-buttons">
-                    <i class="fa-solid fa-shuffle"></i>
-                    <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-solid fa-circle-play"></i>
-                    <i class="fa-solid fa-forward-step"></i>
-                    <i class="fa-solid fa-repeat"></i>
+                    <a href="#"><i class="fa-solid fa-shuffle"></i></a>
+                    <a href="#"><i class="fa-solid fa-backward-step"></i></a>
+                    <a href="#"><i class="fa-solid fa-circle-play"></i></a>
+                    <a href="#"><i class="fa-solid fa-forward-step"></i></a>
+                    <a href="#"><i class="fa-solid fa-repeat"></i></a>
 
                 </div>
                 <div class="current-song-line">
                     <span>0:25</span>
-                    <div id="progress-line"></div>
+                    <div id="progress-line">
+                        <div></div>
+                    </div>
                     <span>4:35</span>
                 </div>
             </div>
 
             <div class="minor-commands">
-                <i class="fa-solid fa-list"></i>
-                <i class="fa-solid fa-desktop"></i>
-                <i class="fa-solid fa-volume-high"></i>
+                <a href="#"><i class="fa-solid fa-list"></i></a>
+                <a href="#"><i class="fa-solid fa-desktop"></i></a>
+                <a href="#"><i class="fa-solid fa-volume-high"></i></a>
                 <div id="progress-line"></div>
             </div>
         </div>
